--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"type": "git",
 		"url": "https://hyperdev.com/#!/project/welcome-project"
 	},
+	"engines": {"node": "16.13.0"},
 	"keywords": [
 		"node",
 		"hyperdev",
